fix(Contact Form): Fix issue type drop down to use scrollbar

--- a/src/app/contact/contact-form/contact-form.component.scss
+++ b/src/app/contact/contact-form/contact-form.component.scss
@@ -22,10 +22,6 @@
   }
 }
 
-.mat-select-panel {
-  overflow:visible !important;
-}
-
 .contact__form {
   width: 800px;
 }
